# keyalias

./: Makefile  README.rst  pyproject.toml
docs/: CNAME  index.html  v1.0.rst
src/keyalias/: __init__.py  core.py
src/keyalias/tests/: __init__.py  test_foo.py  test_mock.py
