[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=77.0",
]

[project]
authors = [
    { email = "johannes.programming@gmail.com", name = "Johannes" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
]
dependencies = [
    "setdoc>=1.3.14",
]
description = "This project allows for adding a property that is an alias for an indexer to a class."
keywords = []
license = "MIT"
license-files = [
    "LICENSE.txt",
]
name = "keyalias"
readme = "README.rst"
requires-python = ">=3.11"
version = "1.0.6"

[project.urls]
Download = "https://pypi.org/project/keyalias/#files"
Index = "https://pypi.org/project/keyalias/"
Source = "https://github.com/johannes-programming/keyalias/"
Website = "https://keyalias.johannes-programming.online/"

[tool.mypy]
files = [
    ".",
]
python_version = "3.11"
strict = false